--- a/club_social/vista/gui/main_window_club_social.ui
+++ b/club_social/vista/gui/main_window_club_social.ui
@@ -106,7 +106,11 @@
               </widget>
              </item>
              <item row="0" column="1">
-              <widget class="QLineEdit" name="lineedit_cedula"/>
+              <widget class="QLineEdit" name="lineedit_cedula">
+               <property name="readOnly">
+                <bool>true</bool>
+               </property>
+              </widget>
              </item>
              <item row="1" column="0">
               <widget class="QLabel" name="label_3">
@@ -116,7 +120,11 @@
               </widget>
              </item>
              <item row="1" column="1">
-              <widget class="QLineEdit" name="lineedit_nombre"/>
+              <widget class="QLineEdit" name="lineedit_nombre">
+               <property name="readOnly">
+                <bool>true</bool>
+               </property>
+              </widget>
              </item>
             </layout>
            </widget>
